added middleware to force json
